fixed issues with spacing on search results

--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -447,9 +447,10 @@ label {
   width: 60%;
   display: inline-flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 
   & .listing_result {
-    margin: 3em 0;
+    margin: 3em 0.6em;
     height: 23em;
 
     & .listing_photo {
